[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# enables setuptools_scm to provide the dynamic version

[tool.ruff]
line-length = 88
src = ["aiomonitor", "tests", "examples"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "Q",  # flake8-quotes
]
ignore = ["E203", "E731", "E501", "Q000"]

[tool.ruff.isort]
known-first-party = ["aiomonitor"]
split-on-trailing-comma = true

[tool.mypy]
ignore_missing_imports = true

[tool.towncrier]
package = "aiomonitor"
filename = "CHANGES.rst"
directory = "changes/"
title_format = "{version} ({project_date})"
template = "changes/template.rst"
underlines = ["-", "~", "^"]
issue_format = "(`#{issue} <https://github.com/aio-libs/aiomonitor/issues/{issue}>`_)"
