[metadata]
name = aiomonitor
version = attr: aiomonitor.__version__
author = Nikolay Novik
author_email = nickolainovik@gmail.com
maintainer = Joongi Kim
maintainer_email = me@daybreaker.info
description = Adds monitor and Python REPL capabilities for asyncio applications
long_description = file: README.rst, CHANGES.rst
keywords = asyncio, aiohttp, monitor, debugging, utility, devtool
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX
    Development Status :: 3 - Alpha
    Framework :: AsyncIO
platforms = POSIX
download_url = https://pypi.org/project/aiomonitor
project_urls =
    Homepage = https://github.com/aio-libs/aiomonitor
    Documentation = https://aiomonitor.readthedocs.io
    Repository = https://github.com/aio-libs/aiomonitor
    Issues = https://github.com/aio-libs/aiomonitor/issues
    Changelog = https://github.com/aio-libs/aiomonitor/blob/main/CHANGES.rst
    Chat = https://matrix.to/#/!aio-libs:matrix.org

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    attrs>=20
    aiohttp~=3.8.5
    click>=8
    janus>=1.0
    terminaltables
    typing-extensions>=4.1
    prompt_toolkit>=3.0
    aioconsole

[options.packages.find]
exclude =
    examples/*
    tools/*
    .*.yml
    *.egg-info
